samples/_failures_safe/1761190652_430d7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_981f0fbb.c: In function ‘main’:
./samples/SAFE/__tmp_981f0fbb.c:160:20: error: expected ‘;’ at end of input
  160 |             fprintf
      |                    ^
      |                    ;
./samples/SAFE/__tmp_981f0fbb.c:160:13: error: expected declaration or statement at end of input
  160 |             fprintf
      |             ^~~~~~~
./samples/SAFE/__tmp_981f0fbb.c:160:13: error: expected declaration or statement at end of input
